--- a/assets/input.css
+++ b/assets/input.css
@@ -53,19 +53,19 @@
   }
 
   .btn-blue-outline {
-    @apply inline-block px-3 py-1.5 text-blue-500 border-2  border-blue-600 rounded-sm hover:opacity-80 active:bg-blue-600 active:text-white;
+    @apply inline-block px-3 py-1.5 text-sky-600 border-2  border-sky-600 rounded-sm hover:bg-sky-600 hover:text-white;
   }
   .btn-red-outline {
-    @apply inline-block px-3 py-1.5 text-red-500 border-2  border-red-600 rounded-sm hover:opacity-80 active:bg-red-600 active:text-white;
+    @apply inline-block px-3 py-1.5 text-rose-600 border-2  border-rose-600 rounded-sm hover:bg-rose-600 hover:text-white;
   }
   .btn-green-outline {
-    @apply inline-block px-3 py-1.5 text-green-500 border-2  border-green-600 rounded-sm hover:opacity-80 active:bg-green-600 active:text-white;
+    @apply inline-block px-3 py-1.5 text-green-600 border-2  border-green-600 rounded-sm hover:bg-green-600 hover:text-white;
   }
   .btn-yellow-outline {
-    @apply inline-block px-3 py-1.5 text-yellow-500 border-2  border-yellow-500 rounded-sm hover:opacity-80 active:bg-yellow-500 active:text-white;
+    @apply inline-block px-3 py-1.5 text-yellow-500 border-2  border-yellow-500 rounded-sm hover:bg-yellow-500 hover:text-white;
   }
   .btn-dark-outline {
-    @apply inline-block px-3 py-1.5 text-gray-700 border-2 border-gray-800 rounded-sm hover:opacity-80 active:bg-gray-800 active:text-white;
+    @apply inline-block px-3 py-1.5 text-gray-700 border-2 border-gray-800 rounded-sm hover:bg-gray-700 hover:text-white;
   }
 
   .input {
